<resources>
    <string name="app_name">TaxCalc</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="billTotal">Bill Total</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="twentyPercent">20%</string>
    <string name="defaultValue">0.00</string>
    <string name="sliderBarPercent">18%</string>
</resources>