<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:padding="5dp"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3"
        android:theme="@android:style/Theme.Material">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/billTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/billTotal"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/billEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tenPercent"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/fifteenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fifteenPercent"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/twentyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/twentyPercent"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tipTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/tip"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/tip10EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tip15EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tip20EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/total"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/total10EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/total15EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/total20EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/customTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/custom"
                android:textColor="#000000" />

            <SeekBar
                android:id="@+id/customSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:focusable="false"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:progress="18" />

            <TextView
                android:id="@+id/customTipTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:text="@string/sliderBarPercent"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tipCustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/tip"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/tipCustomEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totalCustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/total"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/totalCustomEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:text="@string/defaultValue"
                android:textColor="#000000"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>